202207091544: Changed workout select menu to show lower/upper split.
202207091634: Added new infobox to exercise screen. Removed base64 icons and replaced with emojis for meta info.
202207091806: Removed all JSON manipulation and combination actions.
202207092111: Fixed Steps fiber to initiate Combo JSON update in Tools flow.
202207092114: Show last six workouts.
202207262258: Added delay tripwire to stop step flow if it gets stuck on querying the smartwatch for steps data.
202207311510: Adjusted steps flow to account for totalStepe refresh on the smartwatch.
202207311548: Delete todaySteps at the end of the day.
202208141816: Fixed Exercise flow.
202208162228: Removed gelocation for Steps flow.
202208262108: Correct return if lastSteps is greater than steps for todaySteps.
202209201411: Adding workout builder.
202209232142: Fixed exercise list issue and added reverse geolocate
202209271838: Fixed the timer.
202209280006: Added pause, stop, and end controls.
202209281053: Refactoring
202209282221: Added support for no rest.
202210031657: Fixed some minor bugs.
202210061333: Fixed steps flow.
202210062356: Trim leading space in location info.
202210071617: Added end of workout summary.
202210122205: Use atomics for keeping track of steps.
202210291956: Added writePath variable and readme to the initialisation flow.
202210292220: Added writePath to fibres and refactored.
202210300026: Replaced custom reverse geolocate function with standard block.
202211012308: Fixed Steps to send value to KLWP.
202211022357: Fixed errors in exercise fibre.
202303282325: Changed to check last 38 sessions
202303292349: Set correct exerciseData
202304020203: Refactored Exercise and made minor adjustments to Steps flow
202304020217: Add delete backup once exercise session is saved
202304091718: Initial version
202304091719: Refactored to new config system. All variables are in the first flow