@@ -1,1 +1,1 @@
-{"name":"exercise","blurb":"Flow to keep track of exercise and fitness data.","version":"202304091718","configPath":"/storage/emulated/0/Process/automate/3a Exercise/","writePath":"/storage/emulated/0/Data/health/exercise/sessions/","defaultLat":52.50457,"defaultLong":13.33684,"backupFile":"/storage/emulated/0/Data/health/exercise/backup.json","actionsFolder":"/storage/emulated/0/Data/health/exercise/actions/","readingTimeout":30,"comment":"Refactored to new config system. All variables are in the first flow","uri":"content://com.llamalab.automate.provider/flows/12/data"}
+{"name":"exercise","blurb":"Flow to keep track of exercise and fitness data.","version":"202304152154","configPath":"/storage/emulated/0/Process/automate/3a Exercise/","writePath":"/storage/emulated/0/Data/health/exercise/sessions/","defaultLat":52.50457,"defaultLong":13.33684,"backupFile":"/storage/emulated/0/Data/health/exercise/backup.json","actionsFolder":"/storage/emulated/0/Data/health/exercise/actions/","readingTimeout":30,"comment":"Added typelists for screens","uri":"content://com.llamalab.automate.provider/flows/12/data"}
