@@ -1,0 +1,11 @@
+[
+        "Barbell",
+        "Body",
+        "Bosu Ball",
+        "Dumbbell",
+        "Kettlebell",
+        "Machine",
+        "Physio Ball",
+        "Plates",
+        "Ropes"
+]
