@@ -1,0 +1,7 @@
+[
+        "Arms",
+        "Back",
+        "Body",
+        "Chest",
+        "Legs"
+]
