@@ -1,0 +1,5 @@
+[
+        "Cardio",
+        "Flexibility",
+        "Strength"
+]
