@@ -1,0 +1,1 @@
+<meta charset='UTF-8'><meta name='viewport' content='width=device-width'><link href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap' rel='stylesheet'><style>body \{ color: #323036; font-family: Roboto, sans-serif;} div.container \{ position: absolute; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%); padding: 0 10px;} div.exercise>input \{ font-weight: 700; font-size: 2.2em; text-align: center; float: none; padding-bottom: 0.5em;} div.meta>span \{ float: none; font-weight: 400; font-size: 0.8em;} select \{ border: none; outline: none; background-color: transparent; -moz-appearance: none; -webkit-appearance: none;} select:focus \{ border: none; outline: none;} hr \{ width: 80%; text-align: center; border: 0.5px solid #E6E6E6; margin-top: 3em; margin-bottom: 3em;} form \{ text-align: center;} div.reps, div.quantity, div.rest \{ width: 30%; display: inline-block;} div.label \{ text-align: center;} div.value \{ display: inline-block; font-size: 2em; color: #323036;} input \{ font-weight: 700; font-size: 1em; background-color: transparent; border: none; text-align: center; float: left; width: 80%;} input:focus \{ outline: none;} div.value input \{ text-align: center;} div.value span \{ float: left; width: 20%; font-weight: 700; font-size: 0.6em; text-align: left;} img \{ width: 45px;} div.data-box>div \{ width: 31%; font-weight: 700; font-size: 1.1em; text-align: center; color: #CECCD2; display: inline-block;} div.data-box>div>div \{ font-size: 1.5em;}</style><body><div class='container'><form method='get' action='http://localhost/ok' name='exercise'><div class='wrapper'><div class='exercise'><input type='text' name='exercise' id='exercise' value='{currentExerciseData["exercise"];xmlEncode}' required></div><div class='meta'><span class='type'><select name='type' id='type' size='1' required><option value='{currentExerciseData["type"];xmlEncode}' selected>{currentExerciseData["type"];xmlEncode} </option>{exerciseLists["type"]} </select></span><span class='group'><select name='group' id='group' size='1' required><option value='{currentExerciseData["group"];xmlEncode}' selected>{currentExerciseData["group"];xmlEncode} </option>{exerciseLists["group"]} </select></span><span class='equipment'><select name='equipment' id='equipment' size='1' required><option value='{currentExerciseData["equipment"];xmlEncode}' selected>{currentExerciseData["equipment"];xmlEncode} </option>{exerciseLists["equipment"]} </select></span></div><br><div class='data-box'><div class='heartRate'><div>&#129728;</div><br>{hr} </div><div class='maxWork'><div>&#127941;</div><br>{maxWork["reps"];xmlEncode}{maxWork["repsUnit"];xmlEncode}:{maxWork["quantity"];xmlEncode}{maxWork["quantityUnit"];xmlEncode} </div></div><hr><br><div class='reps'><div class='value'><input type='number' id='reps' name='reps' min='0' placeholder='{currentExerciseData["reps"];xmlEncode}' required><span class='units'><select name='repsUnit' id='repsUnit' size='1'><option value='{currentExerciseData["repsUnit"];xmlEncode}' selected>{currentExerciseData["repsUnit"];xmlEncode} </option>{exerciseLists["repsUnit"]} </select></span></div></div><div class='quantity'><div class='value'><input type='number' id='quantity' step='.01' name='quantity' min='0' placeholder='{currentExerciseData["quantity"];xmlEncode}' required><span class='units'><select name='quantityUnit' id='quantityUnit' size='1'><option value='{maxWork["quantityUnit"];xmlEncode}' selected>{maxWork["quantityUnit"];xmlEncode} </option>{exerciseLists["quantityUnit"]} </select></span></div></div><div class='rest'><div class='value'><input type='number' name='rest' id='rest' min='0' max='240' placeholder='{currentExerciseData["rest"];xmlEncode}' required><span>s</span></div></div><input type='submit' action='http://localhost/ok' hidden /></div></form></div></body>
